syntax = "proto3";
package result.v1;

option go_package = "github.com/yoyo1025/k8s-vote-platform/gen/go/result/v1;resultv1";

message PingRequest {}
message PingResponse { string message = 1; }

message GetTotalsRequest {}
message Totals { uint64 candidate_id = 1; uint64 count = 2; }
message GetTotalsResponse {
  repeated Totals totals = 1;
  string updated_at = 2;
}

message SubscribeTotalsRequest { string tenant = 1; }
message SubscribeTotalsResponse {
  repeated Totals totals = 1;
  string updated_at = 2;
}

service ResultService {
  rpc Ping(PingRequest) returns (PingResponse);
  rpc GetTotals (GetTotalsRequest) returns (GetTotalsResponse);
  rpc SubscribeTotals (SubscribeTotalsRequest) returns (stream SubscribeTotalsResponse);
}